<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CodeAssist  libGDX</string>
    <string name="plugin_description">A template for CodeAssist which supports LibGDX</string>
      <string name="codeassist_s_repo">CodeAssist repo: </string>
    <string name="this_template_plugin_on_github">This template plugin on</string>
    <string name="codeassist_on_github">CodeAssist on</string>
    <string name="what_is_new_title">What is new?</string>
   <string name="what_is_new_description" formatted="false">
       Critical issues were fixed:\n- a facet duplicating AndroidFacet\n- registering module while it did not need one\n- one choice one option\n- code was reorganized and temple content was moved to an object
   </string>
</resources>
